--- a/MatchingMakingMonitor/config/settings.default.json
+++ b/MatchingMakingMonitor/config/settings.default.json
@@ -1,14 +1,42 @@
 {
 	"installDirectory": "C:\\Games\\World_of_Warships",
-	"region": "NA",
-	"appIdNA": "04c8800d343d496e7ae9c94ba6e51a0b",
-	"appIdEU": "8c4616d4f59f9e915d214c514f7661f2",
-	"appIdRU": "92669bcd3cb4978e78a387bdc2e7f8d6",
-	"appIdSEA": "a7079ba49e5487b6936aed9176c13968",
-	"baseUrlNA": "https://api.worldofwarships.com",
-	"baseUrlEU": "https://api.worldofwarships.eu",
-	"baseUrlRU": "https://api.worldofwarships.ru",
-	"baseUrlSEA": "https://api.worldofwarships.asia",
+	"region": 1,
+	"appIds": [
+		{
+			"region": 0,
+			"id": "8c4616d4f59f9e915d214c514f7661f2"
+		},
+		{
+			"region": 1,
+			"id": "04c8800d343d496e7ae9c94ba6e51a0b"
+		},
+		{
+			"region": 2,
+			"id": "92669bcd3cb4978e78a387bdc2e7f8d6"
+		},
+		{
+			"region": 4,
+			"id": "a7079ba49e5487b6936aed9176c13968"
+		}
+	],
+	"baseUrls": [
+		{
+			"region": 0,
+			"url": "https://api.worldofwarships.eu"
+		},
+		{
+			"region": 1,
+			"url": "https://api.worldofwarships.com"
+		},
+		{
+			"region": 2,
+			"url": "https://api.worldofwarships.ru"
+		},
+		{
+			"region": 4,
+			"url": "https://api.worldofwarships.asia"
+		}
+	],
 	"token": "",
 	"color1": "#930d0d",
 	"color2": "#cd3333",
@@ -20,21 +48,751 @@
 	"color8": "#793db6",
 	"color9": "#401070",
 	"fontSize": 12,
-	"battleLimits": [ 150, 100, 80, 60, 40, 30, 20, 10, 0 ],
-	"winLimits": [ 90, 80, 70, 60, 50, 40, 30, 20, 0 ],
-	"fragsLimits": [ 1.5, 1.3, 1.1, 1.0, 0.8, 0.6, 0.4, 0.2, 0 ],
-	"xpLimits": [ 1500, 1200, 1000, 900, 800, 600, 500, 400, 0 ],
-	"dmgLimits": [ 75000, 65000, 55000, 45000, 35000, 25000, 15000, 10000, 0 ],
-	"dmgLimitsT1": [ 75000, 65000, 55000, 45000, 35000, 25000, 15000, 10000, 0 ],
-	"dmgLimitsT2": [ 75000, 65000, 55000, 45000, 35000, 25000, 15000, 10000, 0 ],
-	"dmgLimitsT3": [ 75000, 65000, 55000, 45000, 35000, 25000, 15000, 10000, 0 ],
-	"dmgLimitsT4": [ 75000, 65000, 55000, 45000, 35000, 25000, 15000, 10000, 0 ],
-	"dmgLimitsT5": [ 75000, 65000, 55000, 45000, 35000, 25000, 15000, 10000, 0 ],
-	"dmgLimitsT6": [ 75000, 65000, 55000, 45000, 35000, 25000, 15000, 10000, 0 ],
-	"dmgLimitsT7": [ 75000, 65000, 55000, 45000, 35000, 25000, 15000, 10000, 0 ],
-	"dmgLimitsT8": [ 75000, 65000, 55000, 45000, 35000, 25000, 15000, 10000, 0 ],
-	"dmgLimitsT9": [ 75000, 65000, 55000, 45000, 35000, 25000, 15000, 10000, 0 ],
-	"dmgLimitsT10": [ 75000, 65000, 55000, 45000, 35000, 25000, 15000, 10000, 0 ],
+	"battleLimits": [
+		{ "value": 150 },
+		{ "value": 100 },
+		{ "value": 80 },
+		{ "value": 60 },
+		{ "value": 40 },
+		{ "value": 30 },
+		{ "value": 20 },
+		{ "value": 10 },
+		{ "value": 0 }
+	],
+	"winRateLimits": [
+		{ "value": 90 },
+		{ "value": 80 },
+		{ "value": 70 },
+		{ "value": 60 },
+		{ "value": 50 },
+		{ "value": 40 },
+		{ "value": 30 },
+		{ "value": 20 },
+		{ "value": 0 }
+	],
+	"fragsLimits": [
+		{ "value": 1.5 },
+		{ "value": 1.3 },
+		{ "value": 1.1 },
+		{ "value": 1.0 },
+		{ "value": 0.8 },
+		{ "value": 0.6 },
+		{ "value": 0.4 },
+		{ "value": 0.2 },
+		{ "value": 0 }
+	],
+	"xpLimits": [
+		{
+			"tier": 1,
+			"values": [
+				{ "value": 1500 },
+				{ "value": 1200 },
+				{ "value": 1000 },
+				{ "value": 9000 },
+				{ "value": 800 },
+				{ "value": 600 },
+				{ "value": 500 },
+				{ "value": 400 },
+				{ "value": 0 }
+			]
+		},
+		{
+			"tier": 2,
+			"values": [
+				{ "value": 1500 },
+				{ "value": 1200 },
+				{ "value": 1000 },
+				{ "value": 9000 },
+				{ "value": 800 },
+				{ "value": 600 },
+				{ "value": 500 },
+				{ "value": 400 },
+				{ "value": 0 }
+			]
+		},
+		{
+			"tier": 3,
+			"values": [
+				{ "value": 1500 },
+				{ "value": 1200 },
+				{ "value": 1000 },
+				{ "value": 9000 },
+				{ "value": 800 },
+				{ "value": 600 },
+				{ "value": 500 },
+				{ "value": 400 },
+				{ "value": 0 }
+			]
+		},
+		{
+			"tier": 4,
+			"values": [
+				{ "value": 1500 },
+				{ "value": 1200 },
+				{ "value": 1000 },
+				{ "value": 9000 },
+				{ "value": 800 },
+				{ "value": 600 },
+				{ "value": 500 },
+				{ "value": 400 },
+				{ "value": 0 }
+			]
+		},
+		{
+			"tier": 5,
+			"values": [
+				{ "value": 1500 },
+				{ "value": 1200 },
+				{ "value": 1000 },
+				{ "value": 9000 },
+				{ "value": 800 },
+				{ "value": 600 },
+				{ "value": 500 },
+				{ "value": 400 },
+				{ "value": 0 }
+			]
+		},
+		{
+			"tier": 6,
+			"values": [
+				{ "value": 1500 },
+				{ "value": 1200 },
+				{ "value": 1000 },
+				{ "value": 9000 },
+				{ "value": 800 },
+				{ "value": 600 },
+				{ "value": 500 },
+				{ "value": 400 },
+				{ "value": 0 }
+			]
+		},
+		{
+			"tier": 7,
+			"values": [
+				{ "value": 1500 },
+				{ "value": 1200 },
+				{ "value": 1000 },
+				{ "value": 9000 },
+				{ "value": 800 },
+				{ "value": 600 },
+				{ "value": 500 },
+				{ "value": 400 },
+				{ "value": 0 }
+			]
+		},
+		{
+			"tier": 8,
+			"values": [
+				{ "value": 1500 },
+				{ "value": 1200 },
+				{ "value": 1000 },
+				{ "value": 9000 },
+				{ "value": 800 },
+				{ "value": 600 },
+				{ "value": 500 },
+				{ "value": 400 },
+				{ "value": 0 }
+			]
+		},
+		{
+			"tier": 9,
+			"values": [
+				{ "value": 1500 },
+				{ "value": 1200 },
+				{ "value": 1000 },
+				{ "value": 9000 },
+				{ "value": 800 },
+				{ "value": 600 },
+				{ "value": 500 },
+				{ "value": 400 },
+				{ "value": 0 }
+			]
+		},
+		{
+			"tier": 10,
+			"values": [
+				{ "value": 1500 },
+				{ "value": 1200 },
+				{ "value": 1000 },
+				{ "value": 9000 },
+				{ "value": 800 },
+				{ "value": 600 },
+				{ "value": 500 },
+				{ "value": 400 },
+				{ "value": 0 }
+			]
+		}
+	],
+	"dmgLimits": {
+		"destroyer": [
+			{
+				"tier": 1,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 2,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 3,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 4,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 5,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 6,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 7,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 8,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 9,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 10,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			}
+		],
+		"battleship": [
+			{
+				"tier": 1,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 2,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 3,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 4,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 5,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 6,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 7,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 8,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 9,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 10,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			}
+		],
+		"cruiser": [
+			{
+				"tier": 1,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 2,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 3,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 4,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 5,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 6,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 7,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 8,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 9,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 10,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			}
+		],
+		"airCarrier": [
+			{
+				"tier": 1,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 2,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 3,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 4,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 5,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 6,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 7,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 8,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 9,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			},
+			{
+				"tier": 10,
+				"values": [
+					{ "value": 1500 },
+					{ "value": 1200 },
+					{ "value": 1000 },
+					{ "value": 9000 },
+					{ "value": 800 },
+					{ "value": 600 },
+					{ "value": 500 },
+					{ "value": 400 },
+					{ "value": 0 }
+				]
+			}
+		]
+	},
 	"battleWeight": 1.2,
 	"fragsWeight": 1.1,
 	"xpWeight": 0.8,
