--- a/MatchingMakingMonitor/config/settings.default.json
+++ b/MatchingMakingMonitor/config/settings.default.json
@@ -39,189 +39,189 @@
 	],
 	"token": "",
 	"colors": [
-		{ "value": "#930d0d" },
-		{ "value": "#cd3333" },
-		{ "value": "#cc7a00" },
-		{ "value": "#ccb800" },
-		{ "value": "#4d7326" },
-		{ "value": "#4099bf" },
-		{ "value": "#3972c6" },
-		{ "value": "#793db6" },
-		{ "value": "#401070" }
+		"#930d0d",
+		"#cd3333",
+		"#cc7a00",
+		"#ccb800",
+		"#4d7326",
+		"#4099bf",
+		"#3972c6",
+		"#793db6",
+		"#401070"
 	],
 	"fontSize": 12,
 	"battleLimits": [
-		{ "value": 150 },
-		{ "value": 100 },
-		{ "value": 80 },
-		{ "value": 60 },
-		{ "value": 40 },
-		{ "value": 30 },
-		{ "value": 20 },
-		{ "value": 10 },
-		{ "value": 0 }
+		150,
+		100,
+		80,
+		60,
+		40,
+		30,
+		20,
+		10,
+		0
 	],
 	"winRateLimits": [
-		{ "value": 90 },
-		{ "value": 80 },
-		{ "value": 70 },
-		{ "value": 60 },
-		{ "value": 50 },
-		{ "value": 40 },
-		{ "value": 30 },
-		{ "value": 20 },
-		{ "value": 0 }
+		90,
+		80,
+		70,
+		60,
+		50,
+		40,
+		30,
+		20,
+		0
 	],
 	"avgFragsLimits": [
-		{ "value": 1.5 },
-		{ "value": 1.3 },
-		{ "value": 1.1 },
-		{ "value": 1.0 },
-		{ "value": 0.8 },
-		{ "value": 0.6 },
-		{ "value": 0.4 },
-		{ "value": 0.2 },
-		{ "value": 0 }
+		1.5,
+		1.3,
+		1.1,
+		1.0,
+		0.8,
+		0.6,
+		0.4,
+		0.2,
+		0
 	],
 	"avgXpLimits": [
 		{
 			"tier": 1,
 			"values": [
-				{ "value": 1500 },
-				{ "value": 1200 },
-				{ "value": 1000 },
-				{ "value": 9000 },
-				{ "value": 800 },
-				{ "value": 600 },
-				{ "value": 500 },
-				{ "value": 400 },
-				{ "value": 0 }
+				1500,
+				1200,
+				1000,
+				9000,
+				800,
+				600,
+				500,
+				400,
+				0
 			]
 		},
 		{
 			"tier": 2,
 			"values": [
-				{ "value": 1500 },
-				{ "value": 1200 },
-				{ "value": 1000 },
-				{ "value": 9000 },
-				{ "value": 800 },
-				{ "value": 600 },
-				{ "value": 500 },
-				{ "value": 400 },
-				{ "value": 0 }
+				1500,
+				1200,
+				1000,
+				9000,
+				800,
+				600,
+				500,
+				400,
+				0
 			]
 		},
 		{
 			"tier": 3,
 			"values": [
-				{ "value": 1500 },
-				{ "value": 1200 },
-				{ "value": 1000 },
-				{ "value": 9000 },
-				{ "value": 800 },
-				{ "value": 600 },
-				{ "value": 500 },
-				{ "value": 400 },
-				{ "value": 0 }
+				1500,
+				1200,
+				1000,
+				9000,
+				800,
+				600,
+				500,
+				400,
+				0
 			]
 		},
 		{
 			"tier": 4,
 			"values": [
-				{ "value": 1500 },
-				{ "value": 1200 },
-				{ "value": 1000 },
-				{ "value": 9000 },
-				{ "value": 800 },
-				{ "value": 600 },
-				{ "value": 500 },
-				{ "value": 400 },
-				{ "value": 0 }
+				1500,
+				1200,
+				1000,
+				9000,
+				800,
+				600,
+				500,
+				400,
+				0
 			]
 		},
 		{
 			"tier": 5,
 			"values": [
-				{ "value": 1500 },
-				{ "value": 1200 },
-				{ "value": 1000 },
-				{ "value": 9000 },
-				{ "value": 800 },
-				{ "value": 600 },
-				{ "value": 500 },
-				{ "value": 400 },
-				{ "value": 0 }
+				1500,
+				1200,
+				1000,
+				9000,
+				800,
+				600,
+				500,
+				400,
+				0
 			]
 		},
 		{
 			"tier": 6,
 			"values": [
-				{ "value": 1500 },
-				{ "value": 1200 },
-				{ "value": 1000 },
-				{ "value": 9000 },
-				{ "value": 800 },
-				{ "value": 600 },
-				{ "value": 500 },
-				{ "value": 400 },
-				{ "value": 0 }
+				1500,
+				1200,
+				1000,
+				9000,
+				800,
+				600,
+				500,
+				400,
+				0
 			]
 		},
 		{
 			"tier": 7,
 			"values": [
-				{ "value": 1500 },
-				{ "value": 1200 },
-				{ "value": 1000 },
-				{ "value": 9000 },
-				{ "value": 800 },
-				{ "value": 600 },
-				{ "value": 500 },
-				{ "value": 400 },
-				{ "value": 0 }
+				1500,
+				1200,
+				1000,
+				9000,
+				800,
+				600,
+				500,
+				400,
+				0
 			]
 		},
 		{
 			"tier": 8,
 			"values": [
-				{ "value": 1500 },
-				{ "value": 1200 },
-				{ "value": 1000 },
-				{ "value": 9000 },
-				{ "value": 800 },
-				{ "value": 600 },
-				{ "value": 500 },
-				{ "value": 400 },
-				{ "value": 0 }
+				1500,
+				1200,
+				1000,
+				9000,
+				800,
+				600,
+				500,
+				400,
+				0
 			]
 		},
 		{
 			"tier": 9,
 			"values": [
-				{ "value": 1500 },
-				{ "value": 1200 },
-				{ "value": 1000 },
-				{ "value": 9000 },
-				{ "value": 800 },
-				{ "value": 600 },
-				{ "value": 500 },
-				{ "value": 400 },
-				{ "value": 0 }
+				1500,
+				1200,
+				1000,
+				9000,
+				800,
+				600,
+				500,
+				400,
+				0
 			]
 		},
 		{
 			"tier": 10,
 			"values": [
-				{ "value": 1500 },
-				{ "value": 1200 },
-				{ "value": 1000 },
-				{ "value": 9000 },
-				{ "value": 800 },
-				{ "value": 600 },
-				{ "value": 500 },
-				{ "value": 400 },
-				{ "value": 0 }
+				1500,
+				1200,
+				1000,
+				9000,
+				800,
+				600,
+				500,
+				400,
+				0
 			]
 		}
 	],
@@ -230,141 +230,141 @@
 			{
 				"tier": 1,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 2,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 3,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 4,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 5,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 6,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 7,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 8,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 9,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 10,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			}
 		],
@@ -372,141 +372,141 @@
 			{
 				"tier": 1,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 2,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 3,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 4,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 5,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 6,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 7,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 8,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 9,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 10,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			}
 		],
@@ -514,141 +514,141 @@
 			{
 				"tier": 1,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 2,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 3,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 4,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 5,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 6,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 7,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 8,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 9,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 10,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			}
 		],
@@ -656,141 +656,141 @@
 			{
 				"tier": 1,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 2,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 3,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 4,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 5,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 6,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 7,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 8,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 9,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			},
 			{
 				"tier": 10,
 				"values": [
-					{ "value": 1500 },
-					{ "value": 1200 },
-					{ "value": 1000 },
-					{ "value": 9000 },
-					{ "value": 800 },
-					{ "value": 600 },
-					{ "value": 500 },
-					{ "value": 400 },
-					{ "value": 0 }
+					1500,
+					1200,
+					1000,
+					9000,
+					800,
+					600,
+					500,
+					400,
+					0
 				]
 			}
 		]
@@ -799,5 +799,5 @@
 	"avgFragsWeight": 1.1,
 	"avgXpWeight": 0.8,
 	"avgDmgWeight": 0.9,
-	"winWeight": 1
+	"winRateWeight": 1
 }
