--- a/MatchingMakingMonitor/config/settings.default.json
+++ b/MatchingMakingMonitor/config/settings.default.json
@@ -39,759 +39,229 @@
 	],
 	"token": "",
 	"colors": [
-		"#930d0d",
-		"#cd3333",
-		"#cc7a00",
-		"#ccb800",
-		"#4d7326",
-		"#4099bf",
-		"#3972c6",
+		"#401070",
 		"#793db6",
-		"#401070"
+		"#3972c6",
+		"#4099bf",
+		"#4d7326",
+		"#ccb800",
+		"#cc7a00",
+		"#cd3333",
+		"#930d0d"
 	],
 	"fontSize": 12,
-	"battleLimits": [
-		150,
-		100,
-		80,
-		60,
-		40,
-		30,
-		20,
-		10,
-		0
-	],
-	"winRateLimits": [
-		90,
-		80,
-		70,
-		60,
-		50,
-		40,
-		30,
-		20,
-		0
-	],
-	"avgFragsLimits": [
-		1.5,
-		1.3,
-		1.1,
-		1.0,
-		0.8,
-		0.6,
-		0.4,
-		0.2,
-		0
-	],
+	"battleLimits": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
+	"winRateLimits": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
+	"avgFragsLimits": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
 	"avgXpLimits": [
 		{
 			"tier": 1,
-			"values": [
-				1500,
-				1200,
-				1000,
-				9000,
-				800,
-				600,
-				500,
-				400,
-				0
-			]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 2,
-			"values": [
-				1500,
-				1200,
-				1000,
-				9000,
-				800,
-				600,
-				500,
-				400,
-				0
-			]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 3,
-			"values": [
-				1500,
-				1200,
-				1000,
-				9000,
-				800,
-				600,
-				500,
-				400,
-				0
-			]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 4,
-			"values": [
-				1500,
-				1200,
-				1000,
-				9000,
-				800,
-				600,
-				500,
-				400,
-				0
-			]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 5,
-			"values": [
-				1500,
-				1200,
-				1000,
-				9000,
-				800,
-				600,
-				500,
-				400,
-				0
-			]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 6,
-			"values": [
-				1500,
-				1200,
-				1000,
-				9000,
-				800,
-				600,
-				500,
-				400,
-				0
-			]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 7,
-			"values": [
-				1500,
-				1200,
-				1000,
-				9000,
-				800,
-				600,
-				500,
-				400,
-				0
-			]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 8,
-			"values": [
-				1500,
-				1200,
-				1000,
-				9000,
-				800,
-				600,
-				500,
-				400,
-				0
-			]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 9,
-			"values": [
-				1500,
-				1200,
-				1000,
-				9000,
-				800,
-				600,
-				500,
-				400,
-				0
-			]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 10,
-			"values": [
-				1500,
-				1200,
-				1000,
-				9000,
-				800,
-				600,
-				500,
-				400,
-				0
-			]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		}
 	],
 	"avgDmgLimits": {
 		"destroyer": [
 			{
 				"tier": 1,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 2,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 3,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 4,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 5,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 6,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 7,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 8,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 9,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 10,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			}
 		],
 		"battleship": [
 			{
 				"tier": 1,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 2,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 3,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 4,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 5,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 6,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 7,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 8,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 9,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 10,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			}
 		],
 		"cruiser": [
 			{
 				"tier": 1,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 2,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 3,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 4,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 5,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 6,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 7,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 8,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 9,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 10,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			}
 		],
 		"airCarrier": [
 			{
 				"tier": 1,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 2,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 3,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 4,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 5,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 6,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 7,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 8,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 9,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 10,
-				"values": [
-					1500,
-					1200,
-					1000,
-					9000,
-					800,
-					600,
-					500,
-					400,
-					0
-				]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			}
 		]
 	},
