--- a/MatchingMakingMonitor/MatchMakingMonitor.csproj
+++ b/MatchingMakingMonitor/MatchMakingMonitor.csproj
@@ -145,6 +145,13 @@
     <Compile Include="config\Reflection\ExportSettingAttribute.cs" />
     <Compile Include="config\Region.cs" />
     <Compile Include="config\SettingsJson.cs" />
+    <Compile Include="config\warshipsToday\Extensions.cs" />
+    <Compile Include="config\warshipsToday\RemoteStats.cs" />
+    <Compile Include="config\warshipsToday\WarshipsTodayShip.cs" />
+    <Compile Include="config\warshipsToday\WarshipsTodayShipStats.cs" />
+    <Compile Include="config\warshipsToday\WarshipsTodayStats.cs" />
+    <Compile Include="config\warshipsToday\WarshipsTodayEntry.cs" />
+    <Compile Include="config\warshipsToday\WarshipsTodayVehicle.cs" />
     <Compile Include="Models\ResponseTypes\ShipType.cs" />
     <Compile Include="Models\ResponseTypes\ShipTier.cs" />
     <Compile Include="Models\DisplayPlayerStats.cs" />
