--- a/MatchingMakingMonitor/config/settings.default.json
+++ b/MatchingMakingMonitor/config/settings.default.json
@@ -1,4 +1,5 @@
 {
+	"version": "{{versionPlaceholder}}",
 	"installDirectory": "C:\\Games\\World_of_Warships",
 	"region": 1,
 	"appIds": [
@@ -50,218 +51,218 @@
 		"#930d0d"
 	],
 	"fontSize": 12,
-	"battleLimits": [0, 0, 0, 0, 0, 0, 0, 0, 0],
-	"winRateLimits": [0, 0, 0, 0, 0, 0, 0, 0, 0],
-	"avgFragsLimits": [0, 0, 0, 0, 0, 0, 0, 0, 0],
+	"battleLimits": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
+	"winRateLimits": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
+	"avgFragsLimits": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
 	"avgXpLimits": [
 		{
 			"tier": 1,
-			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 2,
-			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 3,
-			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 4,
-			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 5,
-			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 6,
-			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 7,
-			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 8,
-			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 9,
-			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		},
 		{
 			"tier": 10,
-			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 		}
 	],
 	"avgDmgLimits": {
 		"destroyer": [
 			{
 				"tier": 1,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 2,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 3,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 4,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 5,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 6,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 7,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 8,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 9,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 10,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			}
 		],
 		"battleship": [
 			{
 				"tier": 1,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 2,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 3,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 4,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 5,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 6,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 7,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 8,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 9,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 10,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			}
 		],
 		"cruiser": [
 			{
 				"tier": 1,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 2,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 3,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 4,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 5,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 6,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 7,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 8,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 9,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 10,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			}
 		],
 		"airCarrier": [
 			{
 				"tier": 1,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 2,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 3,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 4,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 5,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 6,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 7,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 8,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 9,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			},
 			{
 				"tier": 10,
-				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
+				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
 			}
 		]
 	},
