Added option (default false) to hide players with less than 10 battles

--- a/MatchingMakingMonitor/config/settings.default.json
+++ b/MatchingMakingMonitor/config/settings.default.json
@@ -51,6 +51,7 @@
 		"#930d0d"
 	],
 	"fontSize": 12,
+	"hideLowBattles": true,
 	"battleLimits": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
 	"winRateLimits": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
 	"avgFragsLimits": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
